--- a/src/main/webapp/TimeTracker.html
+++ b/src/main/webapp/TimeTracker.html
@@ -6,7 +6,7 @@
 
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 
-  <link rel="stylesheet" type="text/css" href="TimeTracker.css.css">
+  <link rel="stylesheet" type="text/css" href="TimeTracker.css">
 
   <title>ToDoApp</title>
 
